@@ -26,11 +26,12 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
     preconfiguration file downloaded from a server (preseed/url).
     Thanks to Durk Strooisma for the report and analysis. Closes: #476524.
   * Specify for which release the example preseed file is valid.
+  * Document preseeding of grub password.
 
   [ Joey Hess ]
   * Remove autopartkit from the module list.
 
- -- Frans Pop <fjp@debian.org>  Thu, 24 Apr 2008 13:14:07 +0200
+ -- Frans Pop <fjp@debian.org>  Mon, 28 Apr 2008 10:52:59 +0200
 
 installation-guide (20080211) unstable; urgency=low
 
